infra/k8s/base/sentinela-common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentinela
